# SPECnext

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  switch_stack.S  wrap.c
entry/src/main/cpp/c2clat/: CMakeLists.txt  c2clat  c2clat.cpp
entry/src/main/cpp/cpu2017/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/500.perlbench_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/502.gcc_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/503.bwaves_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/505.mcf_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/507.cactuBSSN_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/508.namd_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/510.parest_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/511.povray_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/519.lbm_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/520.omnetpp_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/521.wrf_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/523.xalancbmk_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/525.x264_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/526.blender_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/527.cam4_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/531.deepsjeng_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/538.imagick_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/541.leela_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/544.nab_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/548.exchange2_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/549.fotonik3d_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/554.roms_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/557.xz_r/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/600.perlbench_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/602.gcc_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/605.mcf_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/619.lbm_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/620.omnetpp_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/623.xalancbmk_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/625.x264_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/631.deepsjeng_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/638.imagick_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/641.leela_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/644.nab_s/: CMakeLists.txt
entry/src/main/cpp/cpu2017/benchspec/CPU/657.xz_s/: CMakeLists.txt
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  history.ets  settings.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: route_map.json
entry/src/main/resources/dark/element/: color.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
