message(STATUS "Generating build files for 507.cactuBSSN_r...")

set(SRC_FILE_507
    src/gnu/regex.c
    src/gnu/getopt.c
    src/gnu/getopt1.c
    src/ADMBase/cctk_Bindings/cctk_ThornBindings.c
    src/ADMCoupling/cctk_Bindings/cctk_ThornBindings.c
    src/ADMMacros/SetLocalSpatialOrder.c
    src/ADMMacros/cctk_Bindings/cctk_ThornBindings.c
    src/Boundary/NoneBoundary.c
    src/Boundary/cctk_Bindings/cctk_ThornBindings.c
    src/Cactus/cctk_Bindings/cctk_ThornBindings.c
    src/Cactus/IO/FortranBindingsIO.c
    src/Boundary/Check.c
    src/Boundary/Register.c
    src/Cactus/IO/OverloadIO.c
    src/Cactus/comm/CactusSync.c
    src/Cactus/main/CactusDefaultMainLoopIndex.c
    src/Cactus/main/CactusDefaultShutdown.c
    src/ADMBase/ParamCheck.c
    src/Cactus/main/CactusDefaultInitialise.c
    src/Cactus/main/CallStartupFunctions.c
    src/Cactus/main/DebugDefines.c
    src/Cactus/comm/Interp.c
    src/Cactus/main/Dummies.c
    src/Cactus/main/Banner.c
    src/Cactus/main/ConfigData.c
    src/Cactus/main/MainUtils.c
    src/Cactus/main/InitialiseDataStructures.c
    src/Cactus/main/DefaultTimers.c
    src/Cactus/main/FortranWrappers.c
    src/Cactus/main/CactusDefaultEvolve.c
    src/Cactus/comm/CactusDefaultComm.c
    src/Cactus/main/ProcessEnvironment.c
    src/ADMBase/InitSymBound.c
    src/Cactus/IO/IOMethods.c
    src/Cactus/main/Complex.c
    src/Cactus/main/GHExtensions.c
    src/Cactus/main/InitialiseCactus.c
    src/Cactus/main/Names.c
    src/Cactus/main/OverloadMain.c
    src/Cactus/main/SetupCache.c
    src/Cactus/main/ProcessCommandLine.c
    src/Cactus/main/ShutdownCactus.c
    src/Boundary/Boundary.c
    src/Cactus/main/ProcessParameterDatabase.c
    src/ADMBase/Static.c
    src/Cactus/main/Termination.c
    src/Cactus/main/Traverse.c
    src/Cactus/main/SetParams.c
    src/Cactus/main/Subsystems.c
    src/Cactus/main/CommandLine.c
    src/Cactus/comm/OverloadComm.c
    src/Cactus/main/ActiveThorns.c
    src/Cactus/comm/Reduction.c
    src/Cactus/main/Coord.c
    src/Cactus/main/flesh.cc
    src/Cactus/main/WarnLevel.c
    src/Boundary/StaticBoundary.c
    src/Cactus/piraha/End.cc
    src/Boundary/CopyBoundary.c
    src/Cactus/piraha/Boundary.cc
    src/Cactus/util/Cache.c
    src/Cactus/piraha/ILiteral.cc
    src/Cactus/piraha/Literal.cc
    src/Cactus/piraha/Start.cc
    src/Cactus/schedule/ScheduleSorter.c
    src/Cactus/schedule/ScheduleTraverse.c
    src/Boundary/FlatBoundary.c
    src/Cactus/piraha/NegLookAhead.cc
    src/Cactus/piraha/Dot.cc
    src/Cactus/piraha/smart_ptr.cc
    src/Cactus/main/Parameters.c
    src/Cactus/util/Malloc.c
    src/ADMBase/Initialisation.c
    src/Cactus/piraha/Multi.cc
    src/Cactus/schedule/ScheduleCreater.c
    src/Cactus/util/File.c
    src/Cactus/util/Math.c
    src/Cactus/util/Network.c
    src/Cactus/main/GroupsOnGH.c
    src/Cactus/util/RegisterKeyedFunction.c
    src/Cactus/util/StoreKeyedData.c
    src/Cactus/util/Hash.c
    src/Cactus/util/StoreNamedData.c
    src/Cactus/main/ScheduleInterface.c
    src/Cactus/util/StoreHandledData.c
    src/Cactus/util/Time.c
    src/Cactus/util/SKBinTree.c
    src/CactusBindings/Functions/ADMBase_Functions.c
    src/CactusBindings/Functions/CartGrid3D_Functions.c
    src/Cactus/util/StringList.c
    src/Cactus/util/String.c
    src/CactusBindings/Functions/GaugeWave_Functions.c
    src/CactusBindings/Functions/GenericFD_Functions.c
    src/Cactus/main/Groups.c
    src/CactusBindings/Functions/Boundary_Functions.c
    src/CactusBindings/Functions/IOASCII_Functions.c
    src/CactusBindings/Functions/CoordBase_Functions.c
    src/CactusBindings/Functions/IOBasic_Functions.c
    src/CactusBindings/Functions/IOUtil_Functions.c
    src/CactusBindings/Functions/ML_BSSN_Helper_Functions.c
    src/CactusBindings/Functions/ML_BSSN_Functions.c
    src/Cactus/util/ParseFile.c
    src/Cactus/piraha/Seq.cc
    src/CactusBindings/Functions/IsFunctionAliased.c
    src/Cactus/util/CactusTimers.c
    src/CactusBindings/Functions/PUGHInterp_Functions.c
    src/CactusBindings/Functions/RegisterThornFunctions.c
    src/CactusBindings/Functions/StaticConformal_Functions.c
    src/CactusBindings/Implementations/ImplementationBindings.c
    src/CactusBindings/Parameters/ADMCoupling_Parameters.c
    src/Cactus/piraha/Bracket.cc
    src/Cactus/piraha/Or.cc
    src/CactusBindings/Functions/MoL_Functions.c
    src/CactusBindings/Functions/PUGHSlab_Functions.c
    src/CactusBindings/Parameters/ADMBase_Parameters.c
    src/CactusBindings/Parameters/ADMMacros_Parameters.c
    src/CactusBindings/Parameters/BindingsParameters.c
    src/CactusBindings/Parameters/Global.c
    src/CactusBindings/Parameters/CoordGauge_Parameters.c
    src/CactusBindings/Parameters/ML_BSSN_Helper_Parameters.c
    src/CactusBindings/Parameters/Boundary_Parameters.c
    src/CactusBindings/Parameters/GaugeWave_Parameters.c
    src/CactusBindings/Parameters/LocalReduce_Parameters.c
    src/CactusBindings/Functions/SymBase_Functions.c
    src/CactusBindings/Parameters/Cactus_Parameters.c
    src/CactusBindings/Parameters/Fortran_Parameters.c
    src/CactusBindings/Parameters/GenericFD_Parameters.c
    src/CactusBindings/Parameters/IOASCII_Parameters.c
    src/CactusBindings/Parameters/IOBasic_Parameters.c
    src/CactusBindings/Parameters/PUGHInterp_Parameters.c
    src/CactusBindings/Parameters/PUGHReduce_Parameters.c
    src/CactusBindings/Parameters/CartGrid3D_Parameters.c
    src/CactusBindings/Parameters/CoordBase_Parameters.c
    src/CactusBindings/Parameters/PUGHSlab_Parameters.c
    src/CactusBindings/Parameters/StaticConformal_Parameters.c
    src/CactusBindings/Parameters/MoL_Parameters.c
    src/CactusBindings/Parameters/IOUtil_Parameters.c
    src/CactusBindings/Parameters/SymBase_Parameters.c
    src/CactusBindings/Parameters/Time_Parameters.c
    src/CactusBindings/Parameters/TmunuBase_Parameters.c
    src/CactusBindings/Schedule/BindingsSchedule.c
    src/CactusBindings/Schedule/ScheduleADMCoupling.c
    src/CactusBindings/Schedule/ScheduleCactus.c
    src/CactusBindings/Schedule/BindingsParameterRecovery.c
    src/Cactus/util/Misc.c
    src/CactusBindings/Schedule/ScheduleBoundary.c
    src/CactusBindings/Schedule/ScheduleADMMacros.c
    src/Boundary/RobinBoundary.c
    src/CactusBindings/Parameters/PUGH_Parameters.c
    src/Cactus/util/snprintf.c
    src/CactusBindings/Schedule/ScheduleGenericFD.c
    src/CactusBindings/Schedule/ScheduleCoordBase.c
    src/CactusBindings/Schedule/ScheduleIOASCII.c
    src/CactusBindings/Schedule/ScheduleIOBasic.c
    src/CactusBindings/Schedule/ScheduleLocalReduce.c
    src/CactusBindings/Schedule/ScheduleFortran.c
    src/CactusBindings/Schedule/ScheduleCoordGauge.c
    src/CactusBindings/Schedule/ScheduleGaugeWave.c
    src/CactusBindings/Schedule/ScheduleIOUtil.c
    src/CactusBindings/Schedule/SchedulePUGHInterp.c
    src/Cactus/util/Expression.c
    src/CactusBindings/Schedule/SchedulePUGHSlab.c
    src/CactusBindings/Schedule/SchedulePUGHReduce.c
    src/CactusBindings/Schedule/ScheduleCartGrid3D.c
    src/CactusBindings/Schedule/SchedulePUGH.c
    src/CactusBindings/Schedule/ScheduleADMBase.c
    src/CactusBindings/Schedule/ScheduleTime.c
    src/CactusBindings/Schedule/ScheduleStaticConformal.c
    src/CactusBindings/Schedule/ScheduleML_BSSN_Helper.c
    src/CactusBindings/Variables/ADMCoupling.c
    src/CactusBindings/Variables/ADMMacros.c
    src/CactusBindings/Variables/Boundary.c
    src/CactusBindings/Schedule/ScheduleSymBase.c
    src/CactusBindings/Schedule/ScheduleTmunuBase.c
    src/CactusBindings/Variables/BindingsVariables.c
    src/CactusBindings/Variables/Cactus.c
    src/CactusBindings/Variables/CartGrid3D.c
    src/CactusBindings/Variables/Fortran.c
    src/CactusBindings/Variables/IOUtil.c
    src/CactusBindings/Variables/CoordGauge.c
    src/CactusBindings/Variables/IOBasic.c
    src/CactusBindings/Variables/PUGHInterp.c
    src/CactusBindings/Variables/PUGHSlab.c
    src/CactusBindings/Variables/IOASCII.c
    src/CactusBindings/Variables/PUGHReduce.c
    src/CactusBindings/Variables/ADMBase.c
    src/CactusBindings/Variables/CoordBase.c
    src/CactusBindings/Variables/LocalReduce.c
    src/CactusBindings/Variables/PUGH.c
    src/CactusBindings/Variables/SymBase.c
    src/Cactus/piraha/Matcher.cc
    src/CactusBindings/Variables/GenericFD.c
    src/CactusBindings/Parameters/ML_BSSN_Parameters.c
    src/CactusBindings/Variables/Time.c
    src/CartGrid3D/DecodeSymParameters.c
    src/CartGrid3D/RegisterSymmetries.c
    src/CactusBindings/Variables/GaugeWave.c
    src/CactusBindings/Variables/StaticConformal.c
    src/CactusBindings/Variables/MoL.c
    src/Boundary/ScalarBoundary.c
    src/CactusBindings/Schedule/ScheduleMoL.c
    src/CartGrid3D/ParamCheck.c
    src/CartGrid3D/cctk_Bindings/cctk_ThornBindings.c
    src/CoordBase/cctk_Bindings/cctk_ThornBindings.c
    src/CartGrid3D/GetSymmetry.c
    src/CoordGauge/cctk_Bindings/cctk_ThornBindings.c
    src/Fortran/cctk_ActiveThorns.f90
    src/Fortran/cctk_Banner.f90
    src/Fortran/cctk_Cache.f90
    src/Fortran/cctk_CommandLine.f90
    src/CoordBase/GHExtension.c
    src/Fortran/cctk_Comm.f90
    src/Fortran/cctk_FortranString1.f90
    src/Fortran/cctk_Complex.f90
    src/Fortran/cctk_Constants.f90
    src/CartGrid3D/SetSymmetry.c
    src/Fortran/cctk_Coord.f90
    src/Cactus/piraha/Lookup.cc
    src/CactusBindings/Schedule/ScheduleML_BSSN.c
    src/Fortran/cctk_DebugDefines.f90
    src/Fortran/cctk_Faces.f90
    src/Fortran/cctk_File.f90
    src/Fortran/cctk_GHExtensions.f90
    src/Fortran/cctk_GNU.f90
    src/Fortran/cctk_Flesh.f90
    src/Fortran/cctk_FortranWrappers.f90
    src/CartGrid3D/Startup.c
    src/Fortran/cctk_Groups.f90
    src/CoordGauge/Slicing.c
    src/Fortran/cctk_GroupsOnGH.f90
    src/Fortran/cctk_IO.f90
    src/Fortran/cctk_Interp.f90
    src/Fortran/cctk_Main.f90
    src/Fortran/cctk_IOMethods.f90
    src/Fortran/cctk_Malloc1.f90
    src/Fortran/cctk_Math.f90
    src/Fortran/cctk_ParamCheck.f90
    src/Fortran/cctk_MemAlloc.f90
    src/Fortran/cctk_Misc.f90
    src/Fortran/cctk_Parameter.f90
    src/Fortran/cctk_Reduction.f90
    src/Fortran/cctk_Schedule.f90
    src/Fortran/cctk_Termination.f90
    src/Fortran/cctk_Types.f90
    src/Fortran/cctk_Version.f90
    src/Fortran/cctk_Sync.f90
    src/Fortran/cctk_WarnLevel.f90
    src/CoordBase/CoordBase.c
    src/Fortran/cctk_Timers.f90
    src/Fortran/cctk_Bindings/cctk_ThornBindings.c
    src/Fortran/paramcheck.f90
    src/Fortran/util_Table.f90
    src/GaugeWave/cctk_Bindings/cctk_ThornBindings.c
    src/CactusBindings/Variables/TmunuBase.c
    src/GenericFD/cctk_Bindings/cctk_ThornBindings.c
    src/CartGrid3D/CartGrid3D.c
    src/CoordBase/Domain.c
    src/IOASCII/ChooseOutput.c
    src/IOASCII/Output1D.c
    src/IOASCII/Output2D.c
    src/IOASCII/Startup.c
    src/IOASCII/cctk_Bindings/cctk_ThornBindings.c
    src/IOASCII/Output3D.c
    src/CactusBindings/Variables/ML_BSSN.c
    src/CactusBindings/Variables/ML_BSSN_Helper.c
    src/IOBasic/WriteInfo.c
    src/IOBasic/cctk_Bindings/cctk_ThornBindings.c
    src/IOBasic/Startup.c
    src/IOUtil/AdvertisedFiles.c
    src/CactusBindings/Functions/AliasedFunctions.c
    src/GaugeWave/RegisterMoL.cc
    src/GaugeWave/Startup.cc
    src/IOBasic/OutputScalar.c
    src/GaugeWave/ParamCheck.cc
    src/GaugeWave/RegisterSymmetries.cc
    src/IOBasic/OutputInfo.c
    src/IOBasic/WriteScalar.c
    src/IOUtil/cctk_Bindings/cctk_ThornBindings.c
    src/GaugeWave/Boundaries.cc
    src/Cactus/piraha/Grammar.cc
    src/LocalReduce/Reduction.c
    src/IOUtil/Startup.c
    src/LocalReduce/ReductionCount.c
    src/LocalReduce/ReductionMax.c
    src/GenericFD/GenericFD.c
    src/LocalReduce/ReductionAvg.c
    src/Boundary/RadiationBoundary.c
    src/LocalReduce/ReductionMin.c
    src/IOASCII/Write3D.c
    src/IOUtil/CheckpointRecovery.c
    src/LocalReduce/ReductionNorm1.c
    src/LocalReduce/Startup.c
    src/LocalReduce/cctk_Bindings/cctk_ThornBindings.c
    src/IOUtil/Utils.c
    src/IOASCII/Write2D.c
    src/LocalReduce/ReductionSum.c
    src/LocalReduce/ReductionNorm3.c
    src/LocalReduce/ReductionNormInf.c
    src/IOASCII/Write1D.c
    src/LocalReduce/ReductionNorm2.c
    src/LocalReduce/ReductionNorm4.c
    src/Cactus/util/Table.c
    src/GaugeWave/GaugeWave_always.cc
    src/GaugeWave/GaugeWave_initial.cc
    src/ML_BSSN/ML_BSSN_Minkowski.cc
    src/ML_BSSN/ML_BSSN_boundary.cc
    src/ML_BSSN/ML_BSSN_convertFromADMBase.cc
    src/ML_BSSN/ML_BSSN_InitGamma.cc
    src/ML_BSSN/ML_BSSN_convertToADMBase.cc
    src/ML_BSSN/cctk_Bindings/cctk_ThornBindings.c
    src/Cactus/piraha/ReParse.cc
    src/ML_BSSN/Startup.cc
    src/ML_BSSN/Boundaries.cc
    src/ML_BSSN/RegisterMoL.cc
    src/ML_BSSN_Helper/RegisterSlicing.c
    src/ML_BSSN_Helper/ExtrapolateGammas.c
    src/Cactus/piraha/Group.cc
    src/ML_BSSN/ML_BSSN_convertToADMBaseFakeDtLapseShift.cc
    src/ML_BSSN_Helper/cctk_Bindings/cctk_ThornBindings.c
    src/ML_BSSN_Helper/RegisterConstrained.c
    src/ML_BSSN/RegisterSymmetries.cc
    src/ML_BSSN_Helper/NewRad.c
    src/ML_BSSN_Helper/SelectBCsADMBase.c
    src/ML_BSSN_Helper/SetGroupTags.c
    src/ML_BSSN/ML_BSSN_convertToADMBaseDtLapseShiftBoundary.cc
    src/MoL/Counter.c
    src/ML_BSSN/ML_BSSN_InitRHS.cc
    src/MoL/AB.c
    src/MoL/Euler.c
    src/MoL/IndexArrays.c
    src/MoL/ICN.c
    src/MoL/ChangeType.c
    src/MoL/GenericRK.c
    src/ML_BSSN/ML_BSSN_enforce.cc
    src/MoL/ParamCheck.c
    src/MoL/RHSNaNCheck.c
    src/MoL/Operators.c
    src/MoL/RK3.c
    src/MoL/RK2.c
    src/MoL/RK4.c
    src/MoL/RK2-MR-2_1.c
    src/MoL/RK4-MR-2_1.c
    src/MoL/RK4-RK2.c
    src/MoL/RKCoefficients.c
    src/MoL/RK45.c
    src/MoL/RK65.c
    src/MoL/Startup.c
    src/MoL/InitialCopy.c
    src/MoL/SandR.c
    src/MoL/cctk_Bindings/cctk_ThornBindings.c
    src/MoL/RK87.c
    src/PUGH/FinishReceiveGA.c
    src/ML_BSSN/ML_BSSN_RHSStaticBoundary.cc
    src/PUGH/Evolve.c
    src/MoL/SetTime.c
    src/PUGH/Overloadables.c
    src/PUGH/Comm.c
    src/PUGH/P2LMappings.c
    src/PUGH/PostReceiveGA.c
    src/Cactus/piraha/Call.cc
    src/PUGH/LoadAware.c
    src/PUGH/PostSendGA.c
    src/PUGH/SetupGroup.c
    src/PUGH/Registration.c
    src/PUGH/PughUtils.c
    src/MoL/StepSize.c
    src/PUGH/Startup.c
    src/PUGH/cctk_Bindings/cctk_ThornBindings.c
    src/PUGH/SetupPGH.c
    src/PUGH/GHExtension.c
    src/PUGHInterp/Startup.c
    src/PUGHInterp/cctk_Bindings/cctk_ThornBindings.c
    src/PUGH/Topology.c
    src/PUGHReduce/ReductionCount.c
    src/PUGHInterp/InterpGridArrays.c
    src/PUGHReduce/Reduction.c
    src/PUGHReduce/ReduceArraysGlobally.c
    src/PUGH/Vectors.cc
    src/MoL/Registration.c
    src/PUGHReduce/Startup.c
    src/PUGHReduce/ReduceGA.c
    src/PUGHReduce/cctk_Bindings/cctk_ThornBindings.c
    src/PUGH/SetupPGV.c
    src/PUGH/Storage.c
    src/PUGHSlab/cctk_Bindings/cctk_ThornBindings.c
    src/PUGHSlab/DatatypeConversion.c
    src/PUGHReduce/ReductionAvg.c
    src/PUGHReduce/ReductionMin.c
    src/CartGrid3D/Symmetry.c
    src/PUGHSlab/GetHyperslab.c
    src/StaticConformal/ConfPhys.c
    src/StaticConformal/cctk_Bindings/cctk_ThornBindings.c
    src/StaticConformal/Initialise.c
    src/PUGHReduce/ReductionNorm1.c
    src/SymBase/Check.c
    src/PUGHReduce/ReductionMax.c
    src/SymBase/cctk_Bindings/cctk_ThornBindings.c
    src/PUGHReduce/ReductionNormInf.c
    src/SymBase/Handles.c
    src/SymBase/Statistics.c
    src/PUGHReduce/ReductionNorm2.c
    src/SymBase/Table.c
    src/PUGHReduce/ReductionSum.c
    src/SymBase/Startup.c
    src/PUGHReduce/ReductionNorm3.c
    src/PUGHSlab/Mapping.c
    src/SymBase/Faces.c
    src/SymBase/Interpolation.c
    src/Time/Courant.c
    src/Time/Given.c
    src/Time/Initialise.c
    src/Time/cctk_Bindings/cctk_ThornBindings.c
    src/Time/Simple.c
    src/TmunuBase/SetStressEnergyState.f90
    src/TmunuBase/cctk_Bindings/cctk_ThornBindings.c
    src/datestamp.c
    src/PUGHReduce/ReductionNorm4.c
    src/Fortran/cctk.f90
    src/TmunuBase/ZeroTmunu.f90
    src/TmunuBase/CopyTmunu.f90
    src/TmunuBase/SetTmunu.f90
    src/ML_BSSN/ML_BSSN_convertFromADMBaseGamma.cc
    src/Cactus/piraha/AutoGrammar.cc
    src/ML_BSSN/ML_BSSN_convertToADMBaseDtLapseShift.cc
    src/ML_BSSN/ML_BSSN_Dissipation.cc
    src/LocalReduce/CountFunctions.c
    src/LocalReduce/MinFunctions.c
    src/LocalReduce/AvgFunctions.c
    src/LocalReduce/Norm1Functions.c
    src/LocalReduce/Norm2Functions.c
    src/LocalReduce/MaxFunctions.c
    src/ML_BSSN/ML_BSSN_Advect.cc
    src/LocalReduce/Norm4Functions.c
    src/LocalReduce/SumFunctions.c
    src/LocalReduce/NormInfFunctions.c
    src/LocalReduce/Norm3Functions.c
    src/ML_BSSN/ML_BSSN_constraints.cc
    src/ML_BSSN/ML_BSSN_RHS.cc
)

add_library(cactuBSSN_r SHARED
    ${SRC_FILE_507}
#    ${HMSPEC_ROOT_DIR}/Fortran_main.c
)
target_compile_definitions(cactuBSSN_r PRIVATE
    -DSPEC -DNDEBUG -DSPEC_AUTO_SUPPRESS_OPENMP -DSPEC_LP64
    "$<$<COMPILE_LANGUAGE:C,CXX>:-DCCODE>"
    -Dregcomp=__wrap_regcomp
    -Dregexec=__wrap_regexec
    -Dregerror=__wrap_regerror
    -Dregfree=__wrap_regfree
)

target_include_directories(cactuBSSN_r PRIVATE
    "D:/llvm-project/flang/include"
    "src/include"
)

target_link_options(cactuBSSN_r PRIVATE
        "-Wl,--undefined=regcomp"
        "-Wl,--undefined=regexec"
        "-Wl,--undefined=regfree"
        "-Wl,--undefined=regerror"
        "-Wl,--as-needed"
)

target_link_directories(cactuBSSN_r PRIVATE
    ${FORTRAN_LIB_DIR}
)

target_link_libraries(cactuBSSN_r PRIVATE
    FortranRuntime
    FortranDecimal
    clang_rt.builtins
)

target_link_options(cactuBSSN_r PRIVATE -Wl,--wrap=regcomp
                                         -Wl,--wrap=regerror
                                         -Wl,--wrap=regexec
                                         -Wl,--wrap=regfree)
